- Some refactoring of the configure.ac script. - Better Mac OS X support (they put glut.h in GLUT/glut.h) :-(

--- a/configure.ac
+++ b/configure.ac
@@ -1,20 +1,18 @@
-dnl Process this file with aclocal ; automake -a ; autoconf to produce a 
-dnl working configure script.
-
-#
-# $Id$
-#
+dnl Process this file with autoget.sh to produce a working configure
+dnl script.
+dnl
+dnl $Id$
 
 AC_INIT
 AC_CONFIG_SRCDIR([src/Aircraft/aircraft.cxx])
 
-# Require at least automake 2.52
+dnl Require at least automake 2.52
 AC_PREREQ(2.52)
 
-# Initialize the automake stuff
+dnl Initialize the automake stuff
 AM_INIT_AUTOMAKE(FlightGear, 0.9.1)
 
-# Checks for programs.
+dnl Checks for programs.
 AC_PROG_MAKE_SET
 AC_PROG_CC
 AC_PROG_CPP
@@ -23,55 +21,24 @@ AC_PROG_RANLIB
 AC_PROG_INSTALL
 AC_PROG_LN_S
 
-# Initialize libtool
-# AM_PROG_LIBTOOL
+dnl set the $host variable based on local machine/os
+AC_CANONICAL_HOST
 
-# Initialize maintainer mode
-# AM_MAINTAINER_MODE
-
-# This is needed for AC_TRY_COMPILE later
-# AC_ISC_POSIX
-
-# Check to see if this `configure' is being run in the `Cygwin32' environment
-AC_EGREP_CPP(yes,
-[#ifdef __MINGW32__
- yes
- #endif
-],is_mingw=yes, is_mingw=no)
-
-echo "IS_MINGW = $is_mingw"
-AM_CONDITIONAL(IS_MINGW, test "x$is_mingw" = "xyes")
-
-AC_EGREP_CPP(yes,
-[#ifdef __CYGWIN__
- yes
- #endif
-],is_cygwin=yes, is_cygwin=no)
-
-echo "IS_CYGWIN = $is_cygwin"
-AM_CONDITIONAL(IS_CYGWIN, test "x$is_cygwin" = "xyes")
-
-# Used by JSBSim
-AC_DEFINE([FGFS], 1, [Define so that JSBSim compiles in 'library' mode])
-
-
-# Used on the Irix platform
+dnl Used on the Irix platform
 AR="ar"
 ARFLAGS="cru"
-OS=`uname -s`
-if test "$OS" = "IRIX" -o "$OS" = "IRIX64"; then
+case "${host}" in
+*-*-irix*)
     if test "$CXX" = "CC"; then
         AR="CC -ar"
         ARFLAGS="-o"
     fi
-fi
+    ;;
+esac
 AC_SUBST(AR)
 AC_SUBST(ARFLAGS)
 
-
-# Specify if we want logging (testing build) or not (release build)
-# set logging default value
-# with_logging=yes
+dnl set logging; default value of with_logging=yes
 AC_ARG_WITH(logging, [  --with-logging          Include logging output (default)])
 if test "x$with_logging" = "xno" ; then
     AC_DEFINE([FG_NDEBUG], 1, [Define for no logging output])
@@ -100,10 +67,6 @@ else
     echo "Building with FGEnvironment"
 fi
 AM_CONDITIONAL(ENABLE_WEATHERCM, test "x$with_weathercm" = "xyes")
-
-# Let the Win32 user specify if they want to build with the SGI
-# opengl.dll as opposed to the more standard openg32.dll
-AC_ARG_WITH(sgi-opengl, [  --with-sgi-opengl       Build against SGI's opengl.dll glu.dll and glut.dll])
 
 dnl Thread related checks
 AC_ARG_WITH(threads, [  --with-threads          Include tile loading threads [default=no]])
@@ -139,79 +102,78 @@ if test "x$with_simgear" != "x" ; then
     EXTRA_DIRS="${EXTRA_DIRS} $with_simgear"
 fi
 
+dnl Used by JSBSim to conditionally compile in fgfs interface code
+AC_DEFINE([FGFS], 1, [Define so that JSBSim compiles in 'library' mode])
+
 # Check for MS Windows environment
 AC_CHECK_HEADER(windows.h)
 
-# extra library and include directories
-if test "x$ac_cv_header_windows_h" != "xyes" ; then
-    EXTRA_DIRS="${EXTRA_DIRS} /usr/X11R6"
+dnl Determine an extra directories to add to include/lib search paths
+case "${host}" in
+*-apple-darwin* | *-*-mingw32*)
+    echo no EXTRA_DIRS for $host
+    ;;
 
+*)
+    if test -d /usr/X11R6 ; then
+        EXTRA_DIR1="/usr/X11R6"
+    fi
     if test -d /opt/X11R6 ; then
-        EXTRA_DIRS="${EXTRA_DIRS} /opt/X11R6"
+        EXTRA_DIR2="/opt/X11R6"
     fi
-else
-    if test  "x$is_cygwin" = "xyes" ; then
-        EXTRA_DIRS="${EXTRA_DIRS} /usr/local"
-    fi
-fi
+    EXTRA_DIRS="$EXTRA_DIR1 $EXTRA_DIR2"
+    ;;
 
+esac
 wi_EXTRA_DIRS(no, ${EXTRA_DIRS})
 
-# Using AM_CONDITIONAL is a step out of the protected little 
-# automake fold so it is potentially dangerous.  But, we are
-# beginning to run into cases where the standard checks are not
-# enough.  AM_CONDITIONALS are then referenced to conditionally
-# build a Makefile.in from a Makefile.am which lets us define custom
-# includes, compile alternative source files, etc.
+
+dnl Using AM_CONDITIONAL is a step out of the protected little 
+dnl automake fold so it is potentially dangerous.  But, we are
+dnl beginning to run into cases where the standard checks are not
+dnl enough.  AM_CONDITIONALS are then referenced to conditionally
+dnl build a Makefile.in from a Makefile.am which lets us define custom
+dnl includes, compile alternative source files, etc.
 
 # Check for external variables daylight and timezone.
 AC_EXT_DAYLIGHT
 if test "$have_daylight" = yes; then
     AC_DEFINE([HAVE_DAYLIGHT], 1, [Define if system has daylight variable])
 fi
-# AM_CONDITIONAL(HAVE_DAYLIGHT, test "$have_daylight" = yes )
 
 AC_EXT_TIMEZONE
 if test "$have_timezone" = yes; then
     AC_DEFINE([HAVE_TIMEZONE], 1, [Define if system has timezone variable])
 fi
-# AM_CONDITIONAL(HAVE_TIMEZONE, test "$have_timezone" = yes )
 
 # Check for audio support
-AC_MSG_CHECKING(for audio support)
-audio_LIBS=""
-if test -r /usr/include/soundcard.h \
-	-o -r /usr/include/linux/soundcard.h \
-	-o -r /usr/include/machine/soundcard.h \
-	-o -r /usr/include/audio.h \
-	-o "x$ac_cv_header_windows_h" = "xyes" \
-        -o "$HOSTTYPE" = "macintosh"; then
+audio_LIBS="-lplibsl -lplibsm"
+case "${host}" in
+*-*-cygwin* | *-*-mingw32*)
+    audio_LIBS="$audio_LIBS -lwinmm"
+    ;;
 
-    AC_DEFINE([ENABLE_AUDIO_SUPPORT], 1, [Define for audio support])
-    audio_LIBS="-lplibsl -lplibsm"
-    AC_MSG_RESULT(yes)
-    if test -r /usr/include/audio.h; then
-        audio_LIBS="$audio_LIBS -laudio"
-    fi
+*-*-irix* )
+    audio_LIBS="$audio_LIBS -laudio"
+    ;;
 
-    if test "x$ac_cv_header_windows_h" = "xyes"; then
-        audio_LIBS="$audio_LIBS -lwinmm"
-    fi
-
-    if test "$HOSTTYPE" = "macintosh"; then
-	audio_LIBS="$audio_LIBS -framework Carbon"
-    fi
-else
-    AC_MSG_RESULT(no)
-fi
+esac
 AC_SUBST(audio_LIBS)
 
-# Check for X11 (fancy)
-if test "x$no_x" != "xyes"; then
-    AC_PATH_XTRA
-fi
+dnl X11 might be installed on Mac OS X or cygwin/mingwin, we don't want
+dnl to use it if it is.
+case "${host}" in
+*-apple-darwin* | *-*-cygwin* | *-*-mingw32*)
+    echo no fancy X11 check
+    ;;
 
-# Checks for libraries.
+*)
+    AC_PATH_XTRA
+    ;;
+
+esac
+
+dnl Checks for libraries.
 
 null_LIBS="$LIBS"
 
@@ -224,117 +186,98 @@ fi
 
 base_LIBS="$LIBS"
 
-dnl Mesa >= 3.2 requires pthreads
+dnl Thread related checks
 AC_CHECK_LIB(pthread, pthread_exit)
 AC_CHECK_LIB(socket, socket)
 
-dnl Skip X library tests.
-if test "x$no_x" != "xyes"; then
-    AC_CHECK_LIB(X11, XCreateWindow)
-    AC_CHECK_LIB(Xext, XShmCreateImage)
-    AC_CHECK_LIB(Xi, XGetExtensionVersion)
-    AC_CHECK_LIB(ICE, IceOpenConnection)
-    AC_CHECK_LIB(SM, SmcOpenConnection)
-    AC_CHECK_LIB(Xt, XtMalloc)
-    AC_CHECK_LIB(Xmu, XmuLookupStandardColormap)
-fi
+dnl check for OpenGL related libraries
+case "${host}" in
+*-*-cygwin* | *-*-mingw32*)
+    dnl CygWin under Windoze.
 
-# check for OpenGL related libraries
+    echo Win32 specific hacks...
+    AC_DEFINE([WIN32], 1, [Define for Win32 platforms])
+    AC_DEFINE([NOMINMAX], 1, [Define for Win32 platforms])
 
-if test "$HOSTTYPE" = "macintosh"; then
-    LIBS="$LIBS -framework OpenGL -framework GLUT -lobjc"
-elif test "x$ac_cv_header_windows_h" != "xyes" ; then
-    # Reasonable stuff for non-windoze variants ... :-)
+    LIBS="$LIBS -lglut32 -lglu32 -lopengl32"
+    LIBS="$LIBS -luser32 -lgdi32"
+
+    dnl add -lwsock32 for mingwin
+    case "${host}" in
+    *-*-mingw32*)
+        LIBS="$LIBS -lws2_32"
+        ;;
+    esac
+
+    echo "Will link apps with $LIBS"
+    ;;
+
+
+*-apple-darwin*)
+    dnl Mac OS X
+
+    LIBS="$LIBS -framework GLUT -framework OpenGL -framework Carbon -lobjc"
+    ;;
+
+*)
+    dnl X-Windows based machines
+
+    dnl Skip X11 library tests if requested.
+    if test "x$no_x" != "xyes"; then
+        AC_CHECK_LIB(X11, XCreateWindow)
+        AC_CHECK_LIB(Xext, XShmCreateImage)
+        AC_CHECK_LIB(Xi, XGetExtensionVersion)
+        AC_CHECK_LIB(ICE, IceOpenConnection)
+        AC_CHECK_LIB(SM, SmcOpenConnection)
+        AC_CHECK_LIB(Xt, XtMalloc)
+        AC_CHECK_LIB(Xmu, XmuLookupStandardColormap)
+    fi
 
     AC_CHECK_LIB(GLcore, glNewList)
     if test "x$ac_cv_lib_GLcore_glNewList" = "xno" ; then
-	# if no GLcore, check for GL
+	dnl if no GLcore, check for GL
 	AC_CHECK_LIB(GL, glNewList)
 	if test "x$ac_cv_lib_GL_glNewList" = "xno" ; then
-	    # if no GL, check for MesaGL
+	    dnl if no GL, check for MesaGL
 	    AC_CHECK_LIB(MesaGL, glNewList)
 	fi
     else
-	# if GLcore found, then also check for GL
+    	dnl if GLcore found, then also check for GL
 	AC_CHECK_LIB(GL, glXCreateContext)
     fi
 
-    # check for xmesa.h and if found enable XMESA / FX
-    AC_CHECK_HEADER(GL/fxmesa.h)
-    if test "x$ac_cv_header_GL_fxmesa_h" = "xyes"; then
-	save_LIBS="$LIBS"
-	AC_CHECK_LIB(GL, XMesaSetFXmode)
-	if test "x$ac_cv_lib_GL_XMesaSetFXmode" = "xyes" ; then
-	    AC_DEFINE([XMESA], 1, [Define for Mesa FX mode])
-            AC_DEFINE([FX], 1, [Define for Mesa FX mode])
-	else
-	    AC_CHECK_LIB(MesaGL, XMesaSetFXmode)
-	    if test "x$ac_cv_lib_MesaGL_XMesaSetFXmode" = "xyes" ; then
-                AC_DEFINE([XMESA], 1, [Define for Mesa FX mode])
-                AC_DEFINE([FX], 1, [Define for Mesa FX mode])
-	    fi
-	fi
-	LIBS="$save_LIBS"
+    dnl if using mesa, check for xmesa.h
+    if test "x$ac_cv_lib_MesaGL_glNewList" = "xyes" ; then
+	AC_CHECK_HEADER(GL/fxmesa.h)
+	if test "x$ac_cv_header_GL_fxmesa_h" = "xyes"; then
+	    AC_DEFINE([XMESA], 1, [Define for fxmesa])
+            AC_DEFINE([FX], 1, [Define for fxmesa])
+        fi
     fi
 
     AC_CHECK_LIB(GLU, gluLookAt)
     if test "x$ac_cv_lib_GLU_gluLookAt" = "xno" ; then
-	# if no GLU, check for MesaGLU
+	dnl if no GLU, check for MesaGLU
 	AC_CHECK_LIB(MesaGLU, gluLookAt)
     fi
 
-    # check for glut
-    AC_CHECK_LIB(glut, glutGetModifiers)
+    LIBS="$LIBS -lglut"
+    ;;
 
-    # test for glutGameModeString, but avoid adding glut a second time into
-    # the list of libraries
-    save_LIBS="$LIBS"
-    AC_CHECK_LIB(glut, glutGameModeString)
-    LIBS="$save_LIBS"
+esac
+
+dnl check for glut location
+AC_CHECK_HEADER(GL/glut.h)
+if test "x$ac_cv_header_GL_glut_h" = "xyes"; then
+    AC_DEFINE([GLUT_H], "GL/glut.h", [Define as glut.h include location])
 else
-    # Win32 is a little wierd because it has to try to handle the various
-    # winbloze-isms.  We'll just do this manually for now.
-
-    echo Win32 specific hacks...
-    AC_DEFINE([WIN32], 1, [Define if building on a Win32 platform])
-    AC_DEFINE([NOMINMAX], 1, [Define for Win32 platforms])
-
-    # just define these to true and hope for the best
-    ac_cv_lib_glut_glutGetModifiers="yes"
-    ac_cv_lib_glut_glutGameModeString="yes"
-
-    if test "x$with_sgi_opengl" = "xyes" ; then
-        echo "Building with glut.dll, glu.dll, and opengl.dll"
-	WIN32_GLUT=glut
-	WIN32_GLU=glu
-	WIN32_OPENGL=opengl
-    else 
-	echo "Building with glut32.dll, glu32.dll, and opengl32.dll"
-	WIN32_GLUT=glut32
-	WIN32_GLU=glu32
-	WIN32_OPENGL=opengl32
+    AC_CHECK_HEADER(GLUT/glut.h)
+    if test "x$ac_cv_header_GLUT_glut_h" = "xyes"; then
+        AC_DEFINE([GLUT_H], "GLUT/glut.h", [Define as glut.h include location])
+    else
+        echo "Neither GL/glut.h nor GLUT/glut.h found.  Cannot continue"
+        exit
     fi
-
-    LIBS="$LIBS -l${WIN32_GLUT} -l${WIN32_GLU} -l${WIN32_OPENGL}"
-    LIBS="$LIBS -luser32 -lgdi32"
-    echo "Will link apps with $LIBS"
-fi
-
-if test "x$ac_cv_lib_glut_glutGetModifiers" = "xno"; then
-    echo 
-    echo "Unable to find the necessary OpenGL or GLUT libraries."
-    echo "See config.log for automated test details and results ..."
-    exit 1
-fi
-
-if test "x$ac_cv_lib_glut_glutGameModeString" = "xno"; then
-    echo
-    echo "Your version of glut doesn't support game mode."
-    echo "You need to install the latest version.  If your distribution doesn't"
-    echo "provide a newer version, you can get the latest source code from:"
-    echo
-    echo "    http://reality.sgi.com/opengl/glut3/glut3.html"
-    exit 1
 fi
 
 opengl_LIBS="$LIBS"
@@ -342,8 +285,6 @@ LIBS="$base_LIBS"
 
 AC_SUBST(base_LIBS)
 AC_SUBST(opengl_LIBS)
-
-AM_CONDITIONAL(HAVE_XWINDOWS, test "x$ac_cv_lib_X11_XCreateWindow" = "xyes" )
 
 # The following are C++ items that need to be tested for with the c++
 # compiler
@@ -386,20 +327,61 @@ int main() {
   AC_MSG_RESULT(yes)
 )
 
-# If we get here then plib is available, so force use of plib joystick lib
+dnl If we get here then plib is available, so force use of plib
+dnl joystick lib
 AC_DEFINE([ENABLE_PLIB_JOYSTICK], 1, [Define to enable plib joystick support])
+AC_DEFINE([FG_PLIB_JOYSTICK_GETNAME], 1,
+          [Define to enable plib joystick name support])
 
-# Do we have a new CVS plib version with jsJoystick::getName?
-echo -n "Testing for Plib joystick getName support: "
-AC_EGREP_HEADER( getName, plib/js.h,
-                 plib_js_has_getname=yes, plib_js_has_getname=no )
-echo $plib_js_has_getname
-if test $plib_js_has_getname = 'yes'; then
-    AC_DEFINE([FG_PLIB_JOYSTICK_GETNAME], 1,
-              [Define to enable plib joystick name support])
+dnl Check for MetaKit
+AC_CHECK_HEADER(mk4.h)
+if test "x$ac_cv_header_mk4_h" != "xyes"; then
+    echo
+    echo "MetaKit library not found."
+    echo
+    echo "If your OS does not provide an installable package for MetaKit"
+    echo "you will have to compile and install it first yourself.  A copy"
+    echo "of metakit-$(VERSION).tar.gz is included with SimGear.  You will"
+    echo "have to untar this source code, and follow it's included instructions"
+    echo "to compile and install on your system."
+    echo
+    echo "configure aborted."
+    exit
 fi
 
-# Check for the presence of SimGear
+AC_MSG_CHECKING([for metakit 2.4.3 or newer])
+saved_LIBS="$LIBS"
+LIBS="$saved_LIBS -lmk4"
+AC_TRY_RUN([
+#include <mk4.h>
+
+#define MIN_MK4_VERSION 243
+
+int main() {
+    int major, minor, micro;
+
+    if ( d4_MetaKitLibraryVersion < MIN_MK4_VERSION ) {
+	 return -1;
+    }
+
+    return 0;
+}
+
+],
+  AC_MSG_RESULT(yes),
+  [AC_MSG_RESULT(wrong version);
+   AC_MSG_ERROR([
+
+Install metakit 2.4.3 or later first.
+
+Or, the compiler may not be finding your libmk4.so library.
+Please check the config.log file for specific details of the
+failure if you believe you have the correct metakit version.
+Also, look up this issue in the FlightGear FAQ.])],
+  AC_MSG_RESULT(yes)
+)
+
+dnl Check for the presence of SimGear
 AC_CHECK_HEADER(simgear/version.h)
 if test "x$ac_cv_header_simgear_version_h" != "xyes"; then
     echo
@@ -450,56 +432,9 @@ int main() {
   AC_MSG_RESULT(yes)
 )
 
-# Check for MetaKit
-AC_CHECK_HEADER(mk4.h)
-if test "x$ac_cv_header_mk4_h" != "xyes"; then
-    echo
-    echo "MetaKit library not found."
-    echo
-    echo "If your OS does not provide an installable package for MetaKit"
-    echo "you will have to compile and install it first yourself.  A copy"
-    echo "of metakit-$(VERSION).tar.gz is included with SimGear.  You will"
-    echo "have to untar this source code, and follow it's included instructions"
-    echo "to compile and install on your system."
-    echo
-    echo "configure aborted."
-    exit
-fi
-
-AC_MSG_CHECKING([for metakit 2.4.3 or newer])
-saved_LIBS="$LIBS"
-LIBS="$saved_LIBS -lmk4"
-AC_TRY_RUN([
-#include <mk4.h>
-
-#define MIN_MK4_VERSION 243
-
-int main() {
-    int major, minor, micro;
-
-    if ( d4_MetaKitLibraryVersion < MIN_MK4_VERSION ) {
-	 return -1;
-    }
-
-    return 0;
-}
-
-],
-  AC_MSG_RESULT(yes),
-  [AC_MSG_RESULT(wrong version);
-   AC_MSG_ERROR([
-
-Install metakit 2.4.3 or later first.
-
-Or, the compiler may not be finding your libmk4.so library.
-Please check the config.log file for specific details of the
-failure if you believe you have the correct metakit version.
-Also, look up this issue in the FlightGear FAQ.])],
-  AC_MSG_RESULT(yes)
-)
 LIBS="$saved_LIBS"
 
-# Check if SimGear was built with Norman JPEG factory support
+dnl Check if SimGear was built with Norman JPEG factory support
 AC_CHECK_HEADER(simgear/screen/jpgfactory.hxx)
 if test "x$ac_cv_header_simgear_screen_jpgfactory_hxx" = "xyes"; then
     AC_CHECK_LIB(jpeg, jpeg_start_compress)
@@ -521,7 +456,7 @@ AM_CONDITIONAL(ENABLE_JPEG_SERVER, test "x$ac_cv_header_simgear_screen_jpgfactor
 
 AC_LANG_POP
 
-# Check for system installed zlib
+dnl Check for system installed zlib
 AC_CHECK_HEADER(zlib.h)
 if test "x$ac_cv_header_zlib_h" != "xyes"; then
     echo
@@ -537,23 +472,24 @@ if test "x$ac_cv_header_zlib_h" != "xyes"; then
     echo
 fi
 
-# Checks for header files.
+dnl Checks for header files.
 AC_HEADER_STDC
 AC_CHECK_HEADERS( \
 	fcntl.h getopt.h malloc.h memory.h stdlib.h sys/param.h sys/stat.h \
         sys/time.h sys/timeb.h unistd.h windows.h winbase.h values.h )
 
-# Checks for typedefs, structures, and compiler characteristics.
+dnl Checks for typedefs, structures, and compiler characteristics.
 AC_C_CONST
 AC_TYPE_SIZE_T
 AC_HEADER_TIME
 AC_STRUCT_TM
 
-# Checks for library functions.
+dnl Checks for library functions.
 AC_TYPE_SIGNAL
 AC_FUNC_VPRINTF
-AC_CHECK_FUNCS( ftime gettimeofday timegm memcpy bcopy mktime strstr rand \
-	random setitimer getitimer signal GetLocalTime rint getrusage )
+AC_CHECK_FUNCS( \
+        ftime gettimeofday timegm memcpy bcopy mktime strstr rand \
+	random drand48 setitimer getitimer signal GetLocalTime rint getrusage )
 
 AM_CONFIG_HEADER(src/Include/config.h)
 
@@ -624,7 +560,7 @@ else
     echo "Debug messages: yes"
 fi
 
-echo -n "Automake version: ($AUTO_MAKE_VERSION) "
+echo -n "Automake version: "
 automake --version | head -1
 
 echo "New plib joystick name support: $plib_js_has_getname"
