--- a/src/Network/Makefile.am
+++ b/src/Network/Makefile.am
@@ -17,7 +17,8 @@ libNetwork_a_SOURCES = \
 	native.cxx native.hxx \
 	native_ctrls.cxx native_ctrls.hxx \
 	native_fdm.cxx native_fdm.hxx \
-	net_ctrls.hxx net_fdm.hxx \
+	native_fdm_mini.cxx native_fdm_mini.hxx \
+	net_ctrls.hxx net_fdm.hxx net_fdm_mini.hxx \
         nmea.cxx nmea.hxx \
         opengc.cxx opengc.hxx opengc_data.hxx \
 	props.cxx props.hxx \
