--- a/src/Instrumentation/Makefile.am
+++ b/src/Instrumentation/Makefile.am
@@ -1,9 +1,11 @@
 noinst_LIBRARIES = libInstrumentation.a
 
 libInstrumentation_a_SOURCES = instrument_mgr.cxx instrument_mgr.hxx \
+                               gyro.cxx gyro.hxx \
                                airspeed_indicator.cxx airspeed_indicator.hxx \
-                               altimeter.cxx altimeter.hxx \
                                attitude_indicator.cxx attitude_indicator.hxx \
+                               altimeter.cxx altimeter.hxx \
+                               turn_indicator.cxx turn_indicator.hxx \
                                heading_indicator.cxx heading_indicator.hxx \
                                vertical_speed_indicator.cxx vertical_speed_indicator.hxx
 
