Added support for the slip-skid ball.

--- a/src/Instrumentation/Makefile.am
+++ b/src/Instrumentation/Makefile.am
@@ -6,6 +6,7 @@ libInstrumentation_a_SOURCES = instrument_mgr.cxx instrument_mgr.hxx \
                                attitude_indicator.cxx attitude_indicator.hxx \
                                altimeter.cxx altimeter.hxx \
                                turn_indicator.cxx turn_indicator.hxx \
+                               slip_skid_ball.cxx slip_skid_ball.hxx \
                                heading_indicator.cxx heading_indicator.hxx \
                                vertical_speed_indicator.cxx vertical_speed_indicator.hxx
 
