Added magnetic compass instrument.
Removed some unused bind/unbind methods.

Improved responsiveness of slip-skid ball.

Some minor cleanups.

--- a/src/Instrumentation/Makefile.am
+++ b/src/Instrumentation/Makefile.am
@@ -8,6 +8,7 @@ libInstrumentation_a_SOURCES = instrument_mgr.cxx instrument_mgr.hxx \
                                turn_indicator.cxx turn_indicator.hxx \
                                slip_skid_ball.cxx slip_skid_ball.hxx \
                                heading_indicator.cxx heading_indicator.hxx \
-                               vertical_speed_indicator.cxx vertical_speed_indicator.hxx
+                               vertical_speed_indicator.cxx vertical_speed_indicator.hxx \
+                               mag_compass.cxx mag_compass.hxx
 
 INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/src
