New version of basic DME support.  This can coexist with the old one for a little while, since it uses different properties.  There are some improvements, especially with searching and range.  It also has its own serviceable and in-range properties, independent of any coupled VOR.

--- a/src/Instrumentation/Makefile.am
+++ b/src/Instrumentation/Makefile.am
@@ -1,6 +1,7 @@
 noinst_LIBRARIES = libInstrumentation.a
 
 libInstrumentation_a_SOURCES = instrument_mgr.cxx instrument_mgr.hxx \
+                               dme.cxx dme.hxx \
                                gyro.cxx gyro.hxx \
                                airspeed_indicator.cxx airspeed_indicator.hxx \
                                attitude_indicator.cxx attitude_indicator.hxx \
