--- a/src/Instrumentation/Makefile.am
+++ b/src/Instrumentation/Makefile.am
@@ -2,6 +2,7 @@ noinst_LIBRARIES = libInstrumentation.a
 
 libInstrumentation_a_SOURCES = instrument_mgr.cxx instrument_mgr.hxx \
                                dme.cxx dme.hxx \
+                               gps.cxx gps.hxx \
                                gyro.cxx gyro.hxx \
                                airspeed_indicator.cxx airspeed_indicator.hxx \
                                attitude_indicator.cxx attitude_indicator.hxx \
